tests/snapshots/examples_fixtures/type_system__68_real_program_effects_module_test.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/68_real_program_effects_module_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E422]: Effect Requirement Mismatch

This call requires effects that are missing from the surrounding effect row: IO.

  examples/type_system/68_real_program_effects_module_test.flx:9:13
  |
9 |     Test.eq(E.run_with_row(E.io_only_value), 7)
  |             ^^^^^^^^^^^^^^
  |             -------------- this call needs effects that are not currently available

  |             -------------- this call to `run_with_row` creates the effect obligation

Note:
  missing required effects: IO
  constraint source: effect-row checking for `run_with_row`

Help:
  Add the missing effects to the enclosing function or handle them before this call.
== stdout ==
<not executed>
